<resources>
    <string name="app_name">PracTrack</string>
    <string name="action_settings">Settings</string>
    <string name="home_tab_dashboard">Dashboard</string>
    <string name="home_tab_overview">Overview</string>
    <string name="home_tab_entries">Entries</string>
    <string name="overview_goals">Goals</string>
    <string name="overview_plans">Plans</string>
    <string name="overview_projects">Projects</string>
    <string name="overview_exercises">Exercises</string>
    <string name="overview_skills">Skills</string>
    <string name="skill_tab_entries">Entries</string>
    <string name="skill_tab_history">History</string>
    <string name="skill_tab_overview">Overview</string>
</resources>
